2-19-19
- convenience variables
- a way to force iosdbg to never add ASLR to expressions via convenience
variables
- rewrote and fixed the expression parser
- expression parser now supports registers and convenience variables
- much better, more descriptive, and more manageable error system
- a ton of cleanup

2-5-18
- ignore zombies in pid_of_program
- fix bug in examine command
- rename memutils_dump_memory_new
- new function to grab a general purpose register

2-2-18
- fix giant memory leak in expr.c by not incrementing the pointer and instead
using an index variable
- fixed many bugs and improved expr.c by a long run
- got rid of the unions I used to convert between types

1-27-18
- implemented an expression parser and included it throughout the debugger
- fixed setting wp_map all to -1 like I should have done when I did it for
breakpoint.c

1-24-19
- new argument to attach command, '--waitfor'
- can have a trace wait for iosdbg to be attached to something before starting
- fix use after free if we iosdbg quits while a trace is active
- other bug fixes

1-23-19
- added trace command and its functionality
- fixed a bug with passing kqid to death_server

1-21-19
- iosdbg can now catch Unix signals sent to debuggee
- replace mach messages with kqueues to tell if debuggee has died
- better exit messages for debuggee
- remove dead code in machthread
- tons and tons of bug fixes related to Unix signals
- changing focused thread while single stepping doesn't mess everything up now
- some cleanup

1-17-19
- can view memory at a general purpose register
- can write to a general purpose register or a floating point register
- can now view FPSR and FPCR
- ask user if they really want to kill debuggee
- fixed bug where resizing your terminal would constantly print duplicate
(iosdbg) prompt
- fixed up Readme

1-16-19
- fix last command repeat functionality
- proper floating point register viewing
- the output when viewing registers is much nicer