@@ -1,6 +1,9 @@
+#include <ctype.h>
+#include <stdio.h>
+#include <stdlib.h>
 #include <string.h>
 #include <unistd.h>
-#include <ctype.h>
+
 #include "convvar.h"
 #include "linkedlist.h"
 
