@@ -1,10 +1,7 @@
 #ifndef _DBGUTILS_H_
 #define _DBGUTILS_H_
 
-#include "convvar.h"
-#include "defs.h"
-#include "dbgcmd.h"
-#include "machthread.h"
+#include <unistd.h>
 
 pid_t pid_of_program(char *, char **);
 char *progname_from_pid(pid_t);
