@@ -1,12 +1,6 @@
 #ifndef _PRINTUTILS_H_
 #define _PRINTUTILS_H_
 
-#include <stdio.h>
-#include <stdlib.h>
-#include <stdarg.h>
-#include <readline/readline.h>
-#include <readline/history.h>
-
 void safe_reprompt(void);
 
 #endif
